duniverse/cstruct-sexp.5.1.1/ppx_test/errors/cenum_unknown_attribute.ml
[%%cenum
  type t =
    | A
  [@@uint9_t]
]
