duniverse/cstruct-sexp.5.1.1/ppx_test/errors/cenum_unknown_attribute.ml.expected
File "cenum_unknown_attribute.ml", line 2, characters 2-32:
Error: ppx_cstruct: enum: unknown width specifier uint9_t
